<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_1"
    android:orientation="vertical"
    tools:context=".device.DeviceActivity">

    <TextView
        android:id="@+id/tvConnectMsg1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="45dp"
        android:textColor="@color/black"
        android:textSize="19dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <TextView
        android:id="@+id/tvConnectMsg2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="73dp"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp">

        <LinearLayout
            android:id="@+id/lr1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect_state"
                android:textColor="@color/black"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_connect_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:textSize="30dp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_ble_connect_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bowlby_one"
                android:text="@string/disconnect"
                android:textStyle="bold"
                android:visibility="invisible" />

        </LinearLayout>

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl1"
        android:gravity="center">

        <ImageView
            android:id="@+id/imgConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/connect"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/imgDisconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/disconnect"
            android:visibility="invisible" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/lr2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/btn_start_measure_heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_measure_heart_rate" />

        <Button
            android:id="@+id/btn_stop_measure_heart_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_measure_heart_rate"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lr3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lr2"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/btn_start_measure_blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_measure_blood_pressure" />

        <Button
            android:id="@+id/btn_stop_measure_blood_pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_measure_blood_pressure" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lr4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lr3"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_blood_oxygen"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:gravity="center_vertical" />

        <Button
            android:id="@+id/btn_start_measure_blood_oxygen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_measure_blood_oxygen" />

        <Button
            android:id="@+id/btn_stop_measure_blood_oxygen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_measure_blood_oxygen" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGoHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lr4"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="145dp"
        android:layout_marginTop="182dp"
        android:layout_marginEnd="146dp"
        android:background="@drawable/mybutton"
        android:onClick="GoHome"
        android:text="go home"
        android:textColor="@color/white" />


</RelativeLayout>